--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "PWA Demo",
-  "short_name": "PWA Demo",
+  "name": "HoMM3 BGM",
+  "short_name": "H3 BGM",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     { "src": "192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
